Update image path

--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/listing_card.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/listing_card.html
@@ -11,7 +11,7 @@
                                     <img src="{{ listing.image_URL }}" class="listing-img img-fluid rounded-start"
                                          alt="{{ listing.title }}">
                                 {% else %}
-                                    <img src="./static/auctions/landscape-placeholder.svg"
+                                    <img src="/static/auctions/landscape-placeholder.svg"
                                          class="listing-img img-fluid rounded-start"
                                          alt="{{ listing.title }}">
                                 {% endif %}
