Change property name

--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/listing_card.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/listing_card.html
@@ -20,7 +20,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">{{ listing.title }}</h5>
                                     <p class="card-text"><span class="listing-price">Price:</span>
-                                        ${{ listing.starting_bid }}</p>
+                                        ${{ listing.price }}</p>
                                     <p class="card-text listing-description">{{ listing.description }}</p>
                                     <p class="card-text"><small
                                             class="listing-timestamp text-body-secondary">Created {{ listing.date_created }}</small>
