--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/register.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/register.html
@@ -9,7 +9,9 @@
     <h2>Register</h2>
 
     {% if message %}
-        <div>{{ message }}</div>
+        <div class="alert alert-danger" role="alert">
+            {{ message }}
+        </div>
     {% endif %}
 
     <form action="{% url 'register' %}" method="post">
