Remove margin bottom from delete bid button

--- a/03-Project-2-Commerce/commerce/auctions/static/auctions/styles.css
+++ b/03-Project-2-Commerce/commerce/auctions/static/auctions/styles.css
@@ -150,3 +150,7 @@ input, textarea {
     text-decoration: line-through !important;
 }
 
+.delete-bid-btn{
+    margin-bottom: 0;
+}
+/*End Place bid form*/
