--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/create_listing.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/create_listing.html
@@ -29,8 +29,8 @@
             </div>
             <div class="form-right-side">
                 <div class="form-group">
-                    <label class="form-label" for="starting_bid">Price</label>
-                    <input class="form-control" type="number" name="price">
+                    <label class="form-label" for="starting_price">Price</label>
+                    <input class="form-control" type="number" name="starting_price">
                 </div>
                 <div class="form-group">
                     <label class="form-label" for="image_URL">Image URL</label>
