Change variable name

--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/index.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/index.html
@@ -7,7 +7,7 @@
         {{ message }}
     {% endif %}
 
-    {% for listing in listings %}
+    {% for listing in active_listings %}
         {% include "auctions/listing_card.html" %}
     {% endfor %}
 {% endblock %}
