Change logic to get listing in user's watchlist

--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/watchlist.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/watchlist.html
@@ -7,7 +7,7 @@
 {% block body %}
     <h2>Watchlist</h2>
 
-    {% for listing in user.watchlist.all %}
+    {% for listing in listings %}
         {% include "auctions/listing_card.html" %}
     {% empty %}
         Watchlist is empty.
