--- a/03-Project-2-Commerce/commerce/auctions/templates/auctions/comment_card.html
+++ b/03-Project-2-Commerce/commerce/auctions/templates/auctions/comment_card.html
@@ -1,8 +1,13 @@
 <div class="card">
-  <h5 class="card-header">Featured</h5>
-  <div class="card-body">
-    <h5 class="card-title">{{ comment.author }}</h5>
-    <p class="card-text">{{ comment.content}}</p>
-      <p><small>{{ comment.pub_date }}</small></p>
-  </div>
+    <div class="card-body">
+        <h5 class="card-title">{{ comment.author }}</h5>
+        <p class="card-text">{{ comment.content}}</p>
+        <p><small>{{ comment.pub_date }}</small></p>
+        {% if comment.author.id == request.user.id %}
+            <form action="{% url 'delete_comment' listing.id comment.id %}" method="post">
+                {% csrf_token %}
+                <input type="submit" value="Delete Comment" class="btn btn-primary">
+            </form>
+        {% endif %}
+    </div>
 </div>
